# png-analyzer

./: .gitignore  CMakeLists.txt  analyzer.c
lib/: decompression_algorithm.h  idat_analyzer.h  ihdr_analyzer.h  image_parsing.h  types.h  utils.h
src/: analyzer.c  decompression_algorithm.c  idat_analyzer.c  ihdr_analyzer.c  image_parsing.c  utils.c
